# EDE

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  Devlog.txt  README.md
data/shaders/: colour.glsl  colour_frag.frag  colour_vert.vert  debug_shader.frag  debug_shader.fs  debug_shader.vert  debug_shader.vs  dirs.glsl  fall_empty.glsl  includes.glsl  matter.glsl  pixel_shader.vert  shader.vert  slide_down_empty.glsl
debug/: plot.py
include/: basic_systems.h  chunk.h  component.h  component_array.h  entity.h  event.h  file_utils.h  input.h  int_hashmap.h  list.h  maths.h  observer.h  pixel_sim.h  plaza.h  pubsub.h  queue.h  renderer.h  rigidbody.h  shader.h  system.h  world.h
src/: basic_systems.c  chunk.c  component.c  component_array.c  event.c  file_utils.c  glad.c  input.c  int_hashmap.c  list.c  main.c  maths.c  observer.c  pixel_sim.c  plaza.c  pubsub.c  queue.c  renderer.c  rigidbody.c  shader.c  system.c  world.c
